# global-entry-notifier

./: README.md  global_entry_notifier.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
global_entry_notifier/: global_entry_notifier.py
